--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node app.js",
+      "db:create": "sequelize db:create",
+      "db:drop": "sequelize db:drop",
+      "db:migrate": "sequelize db:migrate",
+      "db:seed": "sequelize db:seed:all"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +17,11 @@
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0"
+  },
+  "dependencies": {
+    "pg": "^8.11.2",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1"
   }
 }
